--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,7 +6,9 @@ $button-hover-bg: #DDDDEE;
     align-items: stretch;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
+    margin: 0 auto;
+    max-width: 800px;
     padding: 1em;
 
     canvas {
@@ -20,6 +22,7 @@ $button-hover-bg: #DDDDEE;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
+    font-size: 14px;
     margin: 0 0.5em;
     padding: 1em;
 }
@@ -66,6 +69,7 @@ $button-hover-bg: #DDDDEE;
 }
 
 .statsContainer {
+    column-gap: 0.5em;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 
