h5 needs smaller text size

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,6 +25,10 @@ $button-hover-bg: #DDDDEE;
     font-size: 14px;
     margin: 0 0.5em;
     padding: 1em;
+
+    h5 {
+        font-size: 10px;
+    }
 }
 
 .hidden {
