--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,11 +8,12 @@ $button-hover-bg: #DDDDEE;
     flex-direction: row;
     justify-content: center;
     margin: 0 auto;
-    max-width: 800px;
+    max-width: 1100px;
+    min-width: 900px;
     padding: 1em;
 
     canvas {
-        border: 2px solid $border-color;
+        border: 1px solid $border-color;
         border-radius: 5px;
     }
 }
@@ -31,40 +32,11 @@ $button-hover-bg: #DDDDEE;
     }
 }
 
-.hidden {
-    display: none;
-}
-
-.sortControlRow {
-    align-items: stretch;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    vertical-align: middle;
-    padding: 0.5em 0;
-
-    label {
-        padding: 0 1em;
-        height: 20px;
-        margin: auto 0;
-        text-align: justify;
-    }
-
-    div {
-        display: flex;
-        padding: 0 0.5em;
-
-        label {
-            padding: 0 0.25em;
-        }
-    }
-}
-
-.slideContainer {
+.dropdownContainer, .slideContainer, .radioContainer {
     align-items: center;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     width: 100%;
 
     label, input {
@@ -72,14 +44,39 @@ $button-hover-bg: #DDDDEE;
     }
 }
 
+.radioButtonRow {
+    align-items: center;
+    column-gap: 0.5em;
+    display: grid;
+    font-size: 12px;
+    grid-template-columns: 1fr 3fr 1fr 3fr;
+    row-gap: 0.6em;
+
+    input {
+        margin: 0 0.25em;
+    }
+}
+
 .statsContainer {
     column-gap: 0.5em;
     display: grid;
-    grid-template-columns: 1fr 2fr 2fr;
+    grid-template-columns: 1fr 3fr 2fr;
+    font-size: 12px;
 
-    div {
+    .swatch {
         height: 2em;
         margin: auto auto;
         width: 2em;
+    }
+}
+
+.warningBox {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+    h4 {
+        padding-right: 0.5em;
     }
 }
